--- a/sync/waves/manifests.yaml
+++ b/sync/waves/manifests.yaml
@@ -35,6 +35,7 @@ apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
   name: backend
+  namespace: sync
 spec:
   replicas: 3
   selector:
@@ -53,6 +54,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend
+  namespace: sync
 spec:
   selector:
     tier: backend
@@ -83,6 +85,7 @@ apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
   name: frontend
+  namespace: sync
   annotations:
     argocd.argoproj.io/sync-wave: "2"
 spec:
@@ -103,6 +106,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend
+  namespace: sync
   annotations:
     argocd.argoproj.io/sync-wave: "2"
 spec:
