--- a/sync/waves/manifests.yaml
+++ b/sync/waves/manifests.yaml
@@ -67,6 +67,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: maint-page-up
+  namespace: sync
   annotations:
     argocd.argoproj.io/hook: Sync
     argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
@@ -121,6 +122,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: maint-page-down
+  namespace: sync
   annotations:
     argocd.argoproj.io/hook: Sync
     argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
