--- a/manifests/sync/namespace.yaml
+++ b/manifests/sync/namespace.yaml
@@ -1,1 +1,7 @@
-
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: vote-app
+  annotations:
+    argocd.argoproj.io/sync-wave: "-3"
+    argocd.argoproj.io/hook: PreSync
