--- a/manifests/sync/kustomization.yaml
+++ b/manifests/sync/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: vote-app
 resources:
+-namespace.yaml
 - postgres-deployment.yaml
 - postgres-service.yaml
 - postgres-seed.yaml
