--- a/manifests/sync/namespace.yaml
+++ b/manifests/sync/namespace.yaml
@@ -3,5 +3,5 @@ kind: Namespace
 metadata:
   name: vote-app
   annotations:
-    argocd.argoproj.io/sync-wave: "-3"
-    argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/sync-wave: "0"
+      #argocd.argoproj.io/hook: PreSync
