--- a/sync/phases/post-sync-job.yaml
+++ b/sync/phases/post-sync-job.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: postsync
+  namespace: prod
   annotations:
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/hook-delete-policy: HookFailed
