--- a/sync/phases/skip-job.yaml
+++ b/sync/phases/skip-job.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: skipping
+  namespace: prod
   annotations:
     argocd.argoproj.io/hook: Skip
 spec:
