--- a/sync/phases/pre-sync-job.yaml
+++ b/sync/phases/pre-sync-job.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: presync
-  namespace: prod
+  # namespace: prod
   annotations:
     argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
