--- a/hooks/kustomization.yaml
+++ b/hooks/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - presync-job.yaml
-- dbbackup.yaml
+# - dbbackup.yaml
 # - logrotate.yaml
 # - postsync-job.yaml
 # - github.com/gowdasagar06/ArgoCD-Sync-Waves-Hooks/pricelist
