--- a/hooks/kustomization.yaml
+++ b/hooks/kustomization.yaml
@@ -3,10 +3,10 @@ kind: Kustomization
 resources:
 - namespace.yaml
 - presync-job.yaml
-# - dbbackup.yaml
-# - logrotate.yaml
-# - postsync-job.yaml
-# - github.com/gowdasagar06/ArgoCD-Sync-Waves-Hooks/pricelist
-# - presync-sa.yaml
-# - rb-for-sa.yaml
-# - pricelist-wh-ss.yaml
+- dbbackup.yaml
+- logrotate.yaml
+- postsync-job.yaml
+- github.com/gowdasagar06/ArgoCD-Sync-Waves-Hooks/pricelist
+- presync-sa.yaml
+- rb-for-sa.yaml
+- pricelist-wh-ss.yaml
