--- a/hooks/kustomization.yaml
+++ b/hooks/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 - dbbackup.yaml
 - logrotate.yaml
 - postsync-job.yaml
-- github.com/gowdasagar06/ArgoCD-Sync-Waves-Hooks/pricelist
+- ./pricelist/
 - presync-sa.yaml
 - rb-for-sa.yaml
 - pricelist-wh-ss.yaml
